Fix Exhibition text #66

--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ layout: default
 			<li>
 				<figure><img src="{{ '/assets/images/exhibition-blocklyduino.jpg' | prepend: site.baseurl }}" alt="Touch&amp;Try／BlocklyDuinoのイメージ"></figure>
 				<div class="description">
-					<h3 class="exhibition-title">Touch&amp;Try／BlocklyDuino<br>
+					<h3 class="exhibition-title">BlocklyDuinoで電子工作体験（Touch&amp;Try）<br>
 						<small>[Start : 10:00]<!-- [Area: A] --></small></h3>
 					<p>BlocklyDuinoって何？何ができるの？<br>
 					Scratchのようにブロックを組み合わせるだけでArduino（マイコンボード）を制御できるBlocklyDuinoを使って、電子工作を体験しよう！</p>
@@ -368,7 +368,7 @@ layout: default
 			<li>
 				<figure><img src="{{ '/assets/images/exhibition-parlorbeads.jpg' | prepend: site.baseurl }}" alt="パーラービーズのイメージ"><figcaption>写真提供：岸川麻美</figcaption></figure>
 				<div class="description">
-					<h3 class="exhibition-title">パーラービーズ<br>
+					<h3 class="exhibition-title">パーラービーズでドット絵体験<br>
 						<small>[Start : 10:00]<!-- [Area: C] --></small></h3>
 					<p>パーラービーズ（アイロンビーズ）を通じてドット絵の体験をしてみませんか？プログラミングとは無関係に見えますが、ゲームで動いているキャラクターの原点を知ることができますよ。</p>
 				</div>
