Add Staff URL #38

--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@ layout: default
 		</li>
 		<li>
 			<figure class="member-avator"><img src="{{ '/assets/images/staff-dojocon.png' | prepend: site.baseurl }}" alt="森巧尚のプロフィール画像"></figure>
-			<h2 class="member-name">森巧尚</h2>
+			<h2 class="member-name"><a href="http://www.ymori.com" target="_blank">森巧尚</a></h2>
 		</li>
 		<li>
 			<figure class="member-avator"><img src="{{ '/assets/images/staff-yasukawa.jpg' | prepend: site.baseurl }}" alt="安川要平のプロフィール画像"></figure>
