Add sponsor logos and improve the css

--- a/index.html
+++ b/index.html
@@ -156,35 +156,23 @@ layout: default
 		<div class="gold-sponsors">
 			<h2>Gold Sponsors</h2>
 			<ul class="sponsors">
-				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+				<li><a href="https://amimoto-ami.com/" target="_blank"><img src="{{ '/assets/images/logo-amimoto.svg' | prepend: site.baseurl }}" alt="AMIMOTO AMI"></a></li>
 			</ul>
 		</div>
 		<div class="silver-sponsors">
 			<h2>Silver Sponsors</h2>
 			<ul class="sponsors">
-				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+				<li><a href="http://www.mitou.org/" target="_blank"><img src="{{ '/assets/images/logo-mitou.png' | prepend: site.baseurl }}" alt="Mitou Foundation 一般社団法人未踏"></a></li>
+				<li><a href="http://www.ec-cube.net" target="_blank"><img src="{{ '/assets/images/logo-eccube.svg' | prepend: site.baseurl }}" alt="日本発ECオープンプラットフォーム EC CUBE"></a></li>
+				<li><a href="http://www.kdl.co.jp/" target="_blank"><img src="{{ '/assets/images/logo-kdl.svg' | prepend: site.baseurl }}" alt="Kobe Digital Labo"></a></li>
 			</ul>
 		</div>
 		<div class="bronze-sponsors">
 			<h2>Bronze Sponsors</h2>
 			<ul class="sponsors">
-				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+				<li><a href="http://www.tam-tam.co.jp/" target="_blank"><img src="{{ '/assets/images/logo-tam.png' | prepend: site.baseurl }}" alt="TAM"></a></li>
+				<li><a href="https://www.r3it.com/" target="_blank"><img src="{{ '/assets/images/logo-r3.svg' | prepend: site.baseurl }}" alt="R3 institute"></a></li>
+				<li><a href="http://cafigla.com" target="_blank"><img src="{{ '/assets/images/logo-cafigla.svg' | prepend: site.baseurl }}" alt="Cafigla"></a></li>
 			</ul>
 		</div>
 		<p class="become-a-sponsor-outer">
