Fix Session name #76

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ layout: default
 						<!-- <p class="time">[13:30-13:45]</p> -->
 					</li>
 					<li class="bg-dark duration-20min break-5min">
-						<h3 class="session-title"><a href="#coderdojo-kodaira" class="js-session-detail-trigger">CoderDojo小平の活動内容<span class="speaker"> / とがぞの</span></a></h3>
+						<h3 class="session-title"><a href="#coderdojo-kodaira" class="js-session-detail-trigger">CoderDojo Kodairaの活動について<span class="speaker"> / とがぞの</span></a></h3>
 						<p class="time">[13:45-14:05]</p>
 					</li>
 					<li class="bg-light duration-35min break-5min">
