--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ layout: default
 			<div class="what-is-coderdojo">
 				<h2>CoderDojoって？</h2>
 				<p>CoderDojoは2011年にアイルランドから始まった子供達にプログラミングを学ぶ場を提供するボランティア主導の世界的な非営利活動です。</p>
-				<p>Dojoの数は世界中で970（2016年5月段階）にも及びます。</p>
+				<p>Dojoの数は世界中で1,000以上にも及びます。</p>
 				<p class="coderdojo-logo"><img src="{{ '/assets/images/coderdojo-logo.svg' | prepend: site.baseurl }}" alt="CoderDojo ロゴ"></p>
 				<p>日本の道場も現在36となり、徐々に増えつつありますが参加を希望する子供に対してメンター（サポートするボランティア）やDojoが常に不足しています。西宮、梅田で開催しているDojoでは毎回倍率が2倍以上になっています。そのような現状を解決する為に、私たちは今年8月日本で初めてのDojoConを開催します。</p>
 			</div>
