--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@ layout: default
 			</div>
 		</div>
 	</div>
-	<div class="arduino-robot">
+	<div class="arduino-tank">
 		<div class="hand"><img src="{{ '/assets/images/hand.png' | prepend: site.baseurl }}" alt="手"></div>
 		<div class="pipi js-pipi"><img src="{{ '/assets/images/pipi.svg' | prepend: site.baseurl }}" alt="pipi!"></div>
-		<div class="robot js-robot"><img src="{{ '/assets/images/robot.png' | prepend: site.baseurl }}" alt="ロボット"></div>
+		<div class="tank js-tank"><img src="{{ '/assets/images/robot.png' | prepend: site.baseurl }}" alt="Arduino タンク"></div>
 	</div>
 </div>
 
