Fix link between Speaker popup window and Session popup window #80

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ layout: default
 						<p class="time">[15:00-15:40]</p>
 					</li>
 					<li class="bg-light duration-40min break-10min">
-						<h3 class="session-title"><!-- <a href="#champion-panel-discussion" class="js-session-detail-trigger"> -->チャンピオンパネルディスカッション（仮）<span class="speaker"> / 細谷 崇, 宮島 衣瑛, とがぞの</span><!-- </a> --></h3>
+						<h3 class="session-title"><!-- <a href="#champion-panel-discussion" class="js-session-detail-trigger"> -->チャンピオンパネルディスカッション（仮）<span class="speaker"> / 細谷 崇、宮島 衣瑛、とがぞの</span><!-- </a> --></h3>
 						<p class="time">[15:40-16:20]</p>
 					</li>
 					<li class="bg-dark duration-10min">
