--- a/index.html
+++ b/index.html
@@ -227,7 +227,15 @@ layout: default
 						<h3 class="session-title"><!-- <a href="#blocklyduino" class="js-session-detail-trigger"> -->子供でもArduinoを楽しめるBlocklyDuinoの紹介<span class="speaker"> / 岡田 裕行</span><!-- </a> --></h3>
 						<p class="time">[11:45-12:05]</p>
 					</li>
-					<li class="bg-light duration-55min">
+					<li class="bg-light duration-15min">
+						<h3 class="session-title">Coming soon ...</h3>
+						<!-- <p class="time">[12:10-12:25]</p> -->
+					</li>
+					<li class="bg-dark duration-20min">
+						<h3 class="session-title"><a href="#scratch-movesomething" class="js-session-detail-trigger">Scratch2○○シリーズでScratchからさまざまなものを動かそう<span class="speaker"> / 石原淳也</span></a></h3>
+						<p class="time">[12:25-12:45]</p>
+					</li>
+					<li class="bg-light duration-20min">
 						<h3 class="session-title">Coming soon ...</h3>
 						<!-- <p class="time">[12:10-12:25]</p> -->
 					</li>
@@ -243,7 +251,7 @@ layout: default
 						<h3 class="session-title"><a href="#coderdojo-kodaira" class="js-session-detail-trigger">CoderDojo Kodairaの活動について<span class="speaker"> / とがぞの</span></a></h3>
 						<p class="time">[13:45-14:05]</p>
 					</li>
-					<li class="bg-light duration-35min break-5min">
+					<li class="bg-light duration-45min break-5min">
 						<h3 class="session-title">Coming soon ...</h3>
 						<!-- <p class="time">[14:10-14:35]</p> -->
 					</li>
@@ -251,7 +259,7 @@ layout: default
 						<h3 class="session-title"><!-- <a href="#coderdojo-foundation" class="js-session-detail-trigger"> -->CoderDojoムーブメントの旅 - アイルランドの1つのDojoから世界に広がる1000 Dojoへの軌跡をたどる（仮）<span class="speaker"> / ロス・オニール<!-- </a> --></h3>
 						<p class="time">[15:00-15:40]</p>
 					</li>
-					<li class="bg-light duration-40min break-10min">
+					<li class="bg-light duration-40min">
 						<h3 class="session-title"><!-- <a href="#champion-panel-discussion" class="js-session-detail-trigger"> -->チャンピオンパネルディスカッション（仮）<span class="speaker"> / 細谷 崇、宮島 衣瑛、とがぞの</span><!-- </a> --></h3>
 						<p class="time">[15:40-16:20]</p>
 					</li>
