--- a/index.html
+++ b/index.html
@@ -162,17 +162,17 @@ layout: default
 		<div class="silver-sponsors">
 			<h2>Silver Sponsors</h2>
 			<ul class="sponsors">
-				<li><a href="http://www.mitou.org/" target="_blank"><img src="{{ '/assets/images/logo-mitou.png' | prepend: site.baseurl }}" alt="Mitou Foundation 一般社団法人未踏"></a></li>
-				<li><a href="http://www.ec-cube.net" target="_blank"><img src="{{ '/assets/images/logo-eccube.svg' | prepend: site.baseurl }}" alt="日本発ECオープンプラットフォーム EC CUBE"></a></li>
-				<li><a href="http://www.kdl.co.jp/" target="_blank"><img src="{{ '/assets/images/logo-kdl.svg' | prepend: site.baseurl }}" alt="Kobe Digital Labo"></a></li>
+				<li><a href="http://www.mitou.org/" target="_blank"><img src="{{ '/assets/images/logo-mitou.png' | prepend: site.baseurl }}" alt="一般社団法人未踏"></a></li>
+				<li><a href="http://www.ec-cube.net" target="_blank"><img src="{{ '/assets/images/logo-eccube.svg' | prepend: site.baseurl }}" alt="EC-CUBE （株式会社ロックオン）"></a></li>
+				<li><a href="http://www.kdl.co.jp/" target="_blank"><img src="{{ '/assets/images/logo-kdl.svg' | prepend: site.baseurl }}" alt=" 株式会社神戸デジタル・ラボ"></a></li>
 			</ul>
 		</div>
 		<div class="bronze-sponsors">
 			<h2>Bronze Sponsors</h2>
 			<ul class="sponsors">
-				<li><a href="http://www.tam-tam.co.jp/" target="_blank"><img src="{{ '/assets/images/logo-tam.png' | prepend: site.baseurl }}" alt="TAM"></a></li>
-				<li><a href="https://www.r3it.com/" target="_blank"><img src="{{ '/assets/images/logo-r3.svg' | prepend: site.baseurl }}" alt="R3 institute"></a></li>
-				<li><a href="http://cafigla.com" target="_blank"><img src="{{ '/assets/images/logo-cafigla.svg' | prepend: site.baseurl }}" alt="Cafigla"></a></li>
+				<li><a href="http://www.tam-tam.co.jp/" target="_blank"><img src="{{ '/assets/images/logo-tam.png' | prepend: site.baseurl }}" alt="株式会社TAM"></a></li>
+				<li><a href="https://www.r3it.com/" target="_blank"><img src="{{ '/assets/images/logo-r3.svg' | prepend: site.baseurl }}" alt="アールスリーインスティテュート"></a></li>
+				<li><a href="http://cafigla.com" target="_blank"><img src="{{ '/assets/images/logo-cafigla.svg' | prepend: site.baseurl }}" alt="Cafigla LLC.（合同会社カフィグラ）"></a></li>
 			</ul>
 		</div>
 		<p class="become-a-sponsor-outer">
