Fix Gold Sponsor Title

--- a/index.html
+++ b/index.html
@@ -154,7 +154,8 @@ layout: default
 			</span>
 		</h1>
 		<div class="gold-sponsors">
-			<h2>Gold Sponsors</h2>
+			<!-- 2つになったらSponsorsに戻す：高坂さんに確認済 -->
+			<h2>Gold Sponsor</h2>
 			<ul class="sponsors">
 				<li><a href="https://amimoto-ami.com/" target="_blank"><img src="{{ '/assets/images/logo-amimoto.svg' | prepend: site.baseurl }}" alt="AMIMOTO AMI"></a></li>
 			</ul>
