Add Nowprinting image / Change Image Exhibition XR #93

--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@ layout: default
 				</div>
 			</li>
 			<li>
-				<figure><img src="//placehold.it/600x360.png?text=NOW+PRINTING" alt="Exhibitionサムネイル"></figure>
+				<figure><img src="{{ '/assets/images/nowprinting-600x360.jpg' | prepend: site.baseurl }}" alt="Exhibitionサムネイル"></figure>
 				<div class="description">
 					<h3 class="exhibition-title">MR（混合現実）体験！Oculus Riftを使ってバーチャルドローンを飛ばしてみよう！<br>
 						<small>[Start : 10:00]<!-- [Area: C] --></small></h3>
