--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@ layout: default
 				</div>
 			</li>
 			<li>
-				<figure><img src="{{ '/assets/images/exhibition-parlorbeads.jpg' | prepend: site.baseurl }}" alt="パーラービーズのイメージ"><figcaption>写真提供：岸川麻美</figcaption></figure>
+				<figure><img src="{{ '/assets/images/exhibition-perlerbeads.jpg' | prepend: site.baseurl }}" alt="パーラービーズのイメージ"><figcaption>写真提供：岸川麻美</figcaption></figure>
 				<div class="description">
 					<h3 class="exhibition-title">パーラービーズでドット絵体験<br>
 						<small>[Start : 10:00]<!-- [Area: C] --></small></h3>
@@ -371,12 +371,12 @@ layout: default
 				</div>
 			</li>
 			<li>
-				<figure><img src="{{ '/assets/images/nowprinting-600x360.jpg' | prepend: site.baseurl }}" alt="Exhibitionサムネイル"></figure>
+				<figure><img src="{{ '/assets/images/exhibition-drone.jpg' | prepend: site.baseurl }}" alt="MR（混合現実）体験！Oculus Riftを使ってバーチャルドローンを飛ばしてみよう！のイメージ"><figcaption>写真提供：株式会社XOOMS(ズームス）</figcaption></figure>
 				<div class="description">
 					<h3 class="exhibition-title">MR（混合現実）体験！Oculus Riftを使ってバーチャルドローンを飛ばしてみよう！<br>
 						<small>[Start : 10:00]<!-- [Area: C] --></small></h3>
-					<p>MR（Mixed Reality：混合現実）とは ＝ VR（バーチャルリアリティ）と現実との混合の世界。
-VRゴーグル（Oculus Rift）に取り付けた立体カメラから取り込まれた実風景に、CGで作られたドローンをリアルタイムで合成。VRゴーグルの中のバーチャルドローンをゲームパッドで操縦してみよう！（対象年齢：13歳以上）</p>							<p>（協力：株式会社XOOMS(ズームス））</p>
+					<p>MR（Mixed Reality：混合現実）とは ＝ VR（バーチャルリアリティ）と現実との混合の世界。VRゴーグル（Oculus Rift）に取り付けた立体カメラから取り込まれた実風景に、CGで作られたドローンをリアルタイムで合成。VRゴーグルの中のバーチャルドローンをゲームパッドで操縦してみよう！（対象年齢：13歳以上）</p>
+					<p>（協力：株式会社XOOMS(ズームス））</p>
 				</div>
 			</li>
 
