Fix exhibition text of virtual drone #101

--- a/index.html
+++ b/index.html
@@ -373,9 +373,9 @@ layout: default
 			<li>
 				<figure><img src="{{ '/assets/images/exhibition-drone.jpg' | prepend: site.baseurl }}" alt="MR（混合現実）体験！Oculus Riftを使ってバーチャルドローンを飛ばしてみよう！のイメージ"><figcaption>写真提供：株式会社XOOMS(ズームス）</figcaption></figure>
 				<div class="description">
-					<h3 class="exhibition-title">MR（混合現実）体験！Oculus Riftを使ってバーチャルドローンを飛ばしてみよう！<br>
+					<h3 class="exhibition-title">MR（混合現実）体験！Oculus Riftでバーチャルドローンを飛ばそう！<br>
 						<small>[Start : 10:00]<!-- [Area: C] --></small></h3>
-					<p>MR（Mixed Reality：混合現実）とは ＝ VR（バーチャルリアリティ）と現実との混合の世界。VRゴーグル（Oculus Rift）に取り付けた立体カメラから取り込まれた実風景に、CGで作られたドローンをリアルタイムで合成。VRゴーグルの中のバーチャルドローンをゲームパッドで操縦してみよう！（対象年齢：13歳以上）</p>
+					<p>MRとは ＝ VR（バーチャルリアリティ）と現実との混合世界。 VRゴーグルから取り込まれた実風景に、CGのドローンをリアルタイム合成。VRゴーグルの中のバーチャルドローンをゲームパッドで操縦してみよう！（対象年齢：13歳以上）</p>
 					<p>（協力：株式会社XOOMS(ズームス））</p>
 				</div>
 			</li>
