Change workshops to "Coming soon". Fix #103

--- a/index.html
+++ b/index.html
@@ -289,44 +289,49 @@ layout: default
 						<p class="time">[10:00]</p>
 					</li>
 					<li class="bg-light duration-50min break-10min">
-						<h3 class="workshop-title"><a href="#workshop-coderdojo" class="js-session-detail-trigger">CoderDojo体験</a></h3>
+						<h3 class="workshop-title">Coming soon...</h3>
+						<!-- <h3 class="workshop-title"><a href="#workshop-coderdojo" class="js-session-detail-trigger">CoderDojo体験</a></h3>
 						<p class="time">[10:40-11:30]</p>
-						<!-- <p><a href="" class="button button-small button-blue">Entry</a></p> -->
+						<p><a href="" class="button button-small button-blue">Entry</a></p>
 						<h3 class="workshop-title"><a href="#workshop-scratch" class="js-session-detail-trigger">大人のScratch教室</a></h3>
 						<p class="time">[10:40-11:30]</p>
-						<!-- <p><a href="" class="button button-small button-blue">Entry</a></p> -->
+						<p><a href="" class="button button-small button-blue">Entry</a></p> -->
 					</li>
 					<li class="bg-dark duration-50min break-10min">
-						<h3 class="workshop-title"><a href="#workshop-coderdojo" class="js-fancybox-trigger">CoderDojo体験</a></h3>
+						<h3 class="workshop-title">Coming soon...</h3>
+						<!-- <h3 class="workshop-title"><a href="#workshop-coderdojo" class="js-fancybox-trigger">CoderDojo体験</a></h3>
 						<p class="time">[11:40-12:30]</p>
-						<!-- <p><a href="" class="button button-small button-blue">Entry</a></p> -->
+						<p><a href="" class="button button-small button-blue">Entry</a></p>
 						<h3 class="workshop-title"><a href="#workshop-scratch" class="js-fancybox-trigger">大人のScratch教室</a></h3>
 						<p class="time">[11:40-12:30]</p>
-						<!-- <p><a href="" class="button button-small button-blue">Entry</a></p> -->
+						<p><a href="" class="button button-small button-blue">Entry</a></p> -->
 					</li>
 					<li class="bg-light duration-50min break-10min">
-						<h3 class="workshop-title"><a href="#workshop-coderdojo" class="js-fancybox-trigger">CoderDojo体験</a></h3>
+						<h3 class="workshop-title">Coming soon...</h3>
+						<!-- <h3 class="workshop-title"><a href="#workshop-coderdojo" class="js-fancybox-trigger">CoderDojo体験</a></h3>
 						<p class="time">[12:40-13:30]</p>
-						<!-- <p><a href="" class="button button-small button-blue">Entry</a></p> -->
+						<p><a href="" class="button button-small button-blue">Entry</a></p>
 						<h3 class="workshop-title"><a href="#workshop-scratch" class="js-fancybox-trigger">大人のScratch教室</a></h3>
 						<p class="time">[12:40-13:30]</p>
-						<!-- <p><a href="" class="button button-small button-blue">Entry</a></p> -->
+						<p><a href="" class="button button-small button-blue">Entry</a></p> -->
 					</li>
 					<li class="bg-dark duration-50min break-10min">
-						<h3 class="workshop-title"><a href="#workshop-coderdojo" class="js-fancybox-trigger">CoderDojo体験</a></h3>
+						<h3 class="workshop-title">Coming soon...</h3>
+						<!-- <h3 class="workshop-title"><a href="#workshop-coderdojo" class="js-fancybox-trigger">CoderDojo体験</a></h3>
 						<p class="time">[13:40-14:30]</p>
-						<!-- <p><a href="" class="button button-small button-blue">Entry</a></p> -->
+						<p><a href="" class="button button-small button-blue">Entry</a></p>
 						<h3 class="workshop-title"><a href="#workshop-scratch" class="js-fancybox-trigger">大人のScratch教室</a></h3>
 						<p class="time">[13:40-14:30]</p>
-						<!-- <p><a href="" class="button button-small button-blue">Entry</a></p> -->
+						<p><a href="" class="button button-small button-blue">Entry</a></p> -->
 					</li>
 					<li class="bg-light duration-50min break-10min">
-						<h3 class="workshop-title"><a href="#workshop-coderdojo" class="js-fancybox-trigger">CoderDojo体験</a></h3>
+						<h3 class="workshop-title">Coming soon...</h3>
+						<!-- <h3 class="workshop-title"><a href="#workshop-coderdojo" class="js-fancybox-trigger">CoderDojo体験</a></h3>
 						<p class="time">[14:40-15:30]</p>
-						<!-- <p><a href="" class="button button-small button-blue">Entry</a></p> -->
+						<p><a href="" class="button button-small button-blue">Entry</a></p>
 						<h3 class="workshop-title"><a href="#workshop-scratch" class="js-fancybox-trigger">大人のScratch教室</a></h3>
 						<p class="time">[14:40-15:30]</p>
-						<!-- <p><a href="" class="button button-small button-blue">Entry</a></p> -->
+						<p><a href="" class="button button-small button-blue">Entry</a></p> -->
 					</li>
 				</ol>
 			</div>
