--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@ layout: default
 				<figure><img src="{{ '/assets/images/what-is-dojocon-image.jpg' | prepend: site.baseurl }}" alt="DojoCon のイメージ写真"></figure>
 				<div class="text">
 					<h2>DojoConとは？</h2>
-					<p>CoderDojoの主催者やメンター、プログラムを学ぶ子供たち、また活動に賛同・協賛する人が数百人集う大きなイベントです。ヨーロッパでは毎年のように開催され、今年もアイルランドのダブリンで3日間開催されます。DojoConでは、アイデアを共有したり、インスピレーションを得たり、コードでしか知らなかった人に会ったり、価値観が共有できる新しい友人に出会えたり、実践的なスキルについて話合ったりすることができます。</p>
-					<p>CoderDojoをはじめたい人やプログラム教育に興味のある人にとって、コミュニケーションの幅や知識の深さや新たな知見を、また参加したこども達には記憶に残る体験を提供するイベントです。</p>
+					<p>CoderDojoの主催者やメンター、プログラミングを学ぶ子供たち、また活動に賛同・協賛する人が数百人集う大きなイベントです。ヨーロッパでは毎年のように開催され、今年もアイルランドのダブリンで3日間開催されます。DojoConでは、アイデアを共有したり、インスピレーションを得たり、コードでしか知らなかった人に会ったり、価値観が共有できる新しい友人に出会えたり、実践的なスキルについて話合ったりすることができます。</p>
+					<p>CoderDojoをはじめたい人やプログラミング教育に興味のある人にとって、コミュニケーションの幅や知識の深さや新たな知見を、また参加したこども達には記憶に残る体験を提供するイベントです。</p>
 				</div>
 			</div>
 			<div class="first-dojocon-japan">
@@ -55,7 +55,7 @@ layout: default
 					をテーマに</p>
 				<ul>
 					<li><strong>国内でのCoderDojoに携わるメンターの交流</strong></li>
-					<li><strong>プログラム教育、コミュニティー運営、アートなどの各分野に関するエキサイティングなスピーカーを揃えたセッション</strong></li>
+					<li><strong>プログラミング教育、コミュニティー運営、アートなどの各分野に関するエキサイティングなスピーカーを揃えたセッション</strong></li>
 					<li><strong>新しいテクノロジーやサービスに触れるショーケース</strong></li>
 				</ul>
 				<p>を中心に構成され、これから日本各地でCoderDojoが増え、それぞれがいっそう楽しく、より地域に根ざし、そしてクリエイティブなものになっていくことで次世代のテクノロジスト育成の促進を目指します。</p>
