--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ layout: default
 				<div class="text">
 					<h2>DojoConとは？</h2>
 					<p>CoderDojoの主催者やメンター、プログラミングを学ぶ子供たち、また活動に賛同・協賛する人が数百人集う大きなイベントです。ヨーロッパでは毎年のように開催され、今年もアイルランドのダブリンで3日間開催されます。DojoConでは、アイデアを共有したり、インスピレーションを得たり、コードでしか知らなかった人に会ったり、価値観が共有できる新しい友人に出会えたり、実践的なスキルについて話合ったりすることができます。</p>
-					<p>CoderDojoをはじめたい人やプログラミング教育に興味のある人にとって、コミュニケーションの幅や知識の深さや新たな知見を、また参加したこども達には記憶に残る体験を提供するイベントです。</p>
+					<p>CoderDojoをはじめたい人やプログラミング教育に興味のある人にとって、コミュニケーションの幅や知識の深さや新たな知見を、また参加した子供達には記憶に残る体験を提供するイベントです。</p>
 				</div>
 			</div>
 			<div class="first-dojocon-japan">
