Add a contact form page. Fix #106

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@ layout: default
 			<span class="ja">お問い合わせ</span>
 		</span>
 	</h1>
-	<a href="{{ site.contactform_url }}" class="button button-large button-blue button-block open-form" target="_blank">フォームを開く</a>
+	<a href="{{ '/contact/' | prepend: site.baseurl }}" class="button button-large button-blue button-block open-form">フォームを開く</a>
 </div>
 
 <div id="staff" class="staff-section">
