Add comment for pop-up windows

--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@ layout: default
 			<p>記載の内容を当日やむを得ず変更する場合があります。体験型のエキシビジョンで人数を制限する場合があります。事前申込が必要なプログラムがございます。詳細をお知りになりたい場合はお問い合わせください。</p>
 		</div>
 	</div>
+<!-- 基本的には `ul.speakers` 内では `.js-speaker-profile-trigger`、 `ol.sessions` 内では `.js-session-detail-trigger`、 `ol.workshops` 内では最初の2つのみ `.js-session-detail-trigger`、それ以外は `.js-fancybox-trigger` でお願いします。 -->
 	<div class="timetable">
 		<div class="session-block">
 			<ol class="clock">
