Fix exhibition dojo consulting text #92

--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@ layout: default
 				<div class="description">
 					<h3 class="exhibition-title">CoderDojo相談カウンター<br>
 						<small>[Start : 10:00]<!-- [Area: B] --></small></h3>
-					<p>何でも相談してください！<br>
+					<p>イベント開催中、いつでもご相談を受け付けるカウンターを設置します。何でも相談してください！<br>
 					メンター：CoderDojoに参加したい方、CoderDojoを立ち上げたいと思っている方、お気軽にお立ち寄り下さい。<br>
 					忍者：プログラミング(Scratchなど)でつまずいていること、行き詰まっていることなど何でも相談してください。</p>
 				</div>
