Add staff link shibata #116

--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@ layout: default
 		</li>
 		<li>
 			<figure class="member-avator"><img src="{{ '/assets/images/staff-shibata.jpg' | prepend: site.baseurl }}" alt="柴田重臣のプロフィール画像"></figure>
-			<h2 class="member-name">柴田重臣</h2>
+			<h2 class="member-name"><a href="https://twitter.com/shigeomix" target="_blank">柴田重臣</a></h2>
 		</li>
 	</ul>
 </div>
