--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ layout: default
 						<p class="time">[10:30-10:40]</p>
 					</li>
 					<li class="bg-dark duration-40min break-5min">
-						<h3 class="session-title"><!-- <a href="#keynote" class="js-session-detail-trigger"> -->基調講演<span class="speaker"> / 阿部 和広</span><!-- </a> --></h3>
+						<h3 class="session-title"><a href="#keynote" class="js-session-detail-trigger">基調講演：「子供達にプログラミングをサポートする上で大事なポイント」<span class="speaker"> / 阿部 和広</span></a></h3>
 						<p class="time">[10:40-11:20]</p>
 					</li>
 					<li class="bg-light duration-20min">
