--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ layout: default
 						<!-- <p class="time">[14:10-14:35]</p> -->
 					</li>
 					<li class="bg-dark duration-40min">
-						<h3 class="session-title"><!-- <a href="#coderdojo-foundation" class="js-session-detail-trigger"> -->CoderDojoムーブメントの旅 - アイルランドの1つのDojoから世界に広がる1000 Dojoへの軌跡をたどる（仮）<span class="speaker"> / ロス・オニール<!-- </a> --></h3>
+						<h3 class="session-title"><!-- <a href="#coderdojo-foundation" class="js-session-detail-trigger"> -->CoderDojoムーブメントの旅 - アイルランドの1つのDojoから世界に広がる1000 Dojoへの軌跡をたどる（仮）<span class="speaker"> / ロス・オニール</span><!-- </a> --></h3>
 						<p class="time">[15:00-15:40]</p>
 					</li>
 					<li class="bg-light duration-40min">
