Add session programming-school-discussion #87

--- a/index.html
+++ b/index.html
@@ -254,19 +254,23 @@ layout: default
 						<h3 class="session-title"><a href="#coderdojo-kodaira" class="js-session-detail-trigger">CoderDojo Kodairaの活動について<span class="speaker"> / とがぞの</span></a></h3>
 						<p class="time">[13:45-14:05]</p>
 					</li>
-					<li class="bg-light duration-45min break-5min">
-						<h3 class="session-title">Coming soon...</h3>
-						<!-- <p class="time">[14:10-14:35]</p> -->
+					<li class="bg-light duration-25min">
+						<h3 class="session-title"><a href="#programming-schools-discussion" class="js-session-detail-trigger">有償と無償で何が違う？<br>プログラミング教室/コミュニティー運営座談会</a></h3>
+						<p class="time">[14:10-14:35]</p>
 					</li>
-					<li class="bg-dark duration-40min">
+					<li class="bg-dark duration-20min break-5min">
+						<h3 class="session-title">Coming soon...</h3>
+						<!-- <p class="time">[14:35-14:55]</p> -->
+					</li>
+					<li class="bg-light duration-40min">
 						<h3 class="session-title"><!-- <a href="#coderdojo-foundation" class="js-session-detail-trigger"> -->CoderDojoムーブメントの旅 - アイルランドの1つのDojoから世界に広がる1000 Dojoへの軌跡をたどる（仮）<span class="speaker"> / ロス・オニール</span><!-- </a> --></h3>
 						<p class="time">[15:00-15:40]</p>
 					</li>
-					<li class="bg-light duration-40min">
+					<li class="bg-dark duration-40min">
 						<h3 class="session-title"><!-- <a href="#champion-panel-discussion" class="js-session-detail-trigger"> -->チャンピオンパネルディスカッション（仮）<span class="speaker"> / 細谷 崇、宮島 衣瑛、とがぞの</span><!-- </a> --></h3>
 						<p class="time">[15:40-16:20]</p>
 					</li>
-					<li class="bg-dark duration-10min">
+					<li class="bg-light duration-10min">
 						<h3 class="session-title">閉会のことば</h3>
 						<p class="time">[16:20-16:30]</p>
 					</li>
