--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ layout: default
 						<!-- <p class="time">[12:10-12:25]</p> -->
 					</li>
 					<li class="bg-dark duration-20min">
-						<h3 class="session-title"><a href="#scratch-movesomething" class="js-session-detail-trigger">Scratch2○○シリーズでScratchからさまざまなものを動かそう<span class="speaker"> / 石原淳也</span></a></h3>
+						<h3 class="session-title"><a href="#scratch-movesomething" class="js-session-detail-trigger">Scratch とマインクラフト、ドローンやロボットをつなげよう<span class="speaker"> / 石原淳也</span></a></h3>
 						<p class="time">[12:25-12:45]</p>
 					</li>
 					<li class="bg-light duration-20min">
