Add speaker Tanioka and Hashizume #147 #148

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ layout: default
 						<p class="time">[13:45-14:05]</p>
 					</li>
 					<li class="bg-light duration-25min">
-						<h3 class="session-title"><a href="#programming-schools-discussion" class="js-session-detail-trigger">有償と無償で何が違う？<br>プログラミング教室/コミュニティー運営座談会<span class="speaker"> / 谷岡 広樹<!-- 、橋爪 --></span></a></h3>
+						<h3 class="session-title"><a href="#programming-schools-discussion" class="js-session-detail-trigger">有償と無償で何が違う？<br>プログラミング教室/コミュニティー運営座談会<span class="speaker"> / 谷岡 広樹、橋爪 香織</span></a></h3>
 						<p class="time">[14:10-14:35]</p>
 					</li>
 					<li class="bg-dark duration-20min break-5min">
