Add sponsor ShareWis

--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@ layout: default
 				<li><a href="https://www.r3it.com/" target="_blank"><img src="{{ '/assets/images/logo-r3.svg' | prepend: site.baseurl }}" alt="アールスリーインスティテュート"></a></li>
 				<li><a href="http://cafigla.com" target="_blank"><img src="{{ '/assets/images/logo-cafigla.svg' | prepend: site.baseurl }}" alt="Cafigla LLC.（合同会社カフィグラ）"></a></li>
 				<li><a href="https://www.firstserver.co.jp/" target="_blank"><img src="{{ '/assets/images/logo-firstserver.svg' | prepend: site.baseurl }}" alt="ファーストサーバ株式会社"></a></li>
+				<li><a href="https://share-wis.com/" target="_blank"><img src="{{ '/assets/images/logo-sharewis.svg' | prepend: site.baseurl }}" alt="株式会社シェアウィズ"></a></li>
 			</ul>
 		</div>
 		<p class="become-a-sponsor-outer">
