Add sponsor ArTec

--- a/index.html
+++ b/index.html
@@ -166,7 +166,8 @@ layout: default
 			<ul class="sponsors">
 				<li><a href="http://www.mitou.org/" target="_blank"><img src="{{ '/assets/images/logo-mitou.png' | prepend: site.baseurl }}" alt="一般社団法人未踏"></a></li>
 				<li><a href="http://www.ec-cube.net" target="_blank"><img src="{{ '/assets/images/logo-eccube.svg' | prepend: site.baseurl }}" alt="EC-CUBE （株式会社ロックオン）"></a></li>
-				<li><a href="http://www.kdl.co.jp/" target="_blank"><img src="{{ '/assets/images/logo-kdl.svg' | prepend: site.baseurl }}" alt=" 株式会社神戸デジタル・ラボ"></a></li>
+				<li><a href="http://www.kdl.co.jp/" target="_blank"><img src="{{ '/assets/images/logo-kdl.svg' | prepend: site.baseurl }}" alt="株式会社神戸デジタル・ラボ"></a></li>
+				<li><a href="http://www.artec-kk.co.jp/" target="_blank"><img src="{{ '/assets/images/logo-artec.svg' | prepend: site.baseurl }}" alt="株式会社アーテック"></a></li>
 			</ul>
 		</div>
 		<div class="bronze-sponsors">
