Add a glod sponsor. Fix #178

--- a/index.html
+++ b/index.html
@@ -156,9 +156,10 @@ layout: default
 		</h1>
 		<div class="gold-sponsors">
 			<!-- 2つになったらSponsorsに戻す：高坂さんに確認済 -->
-			<h2>Gold Sponsor</h2>
+			<h2>Gold Sponsors</h2>
 			<ul class="sponsors">
 				<li><a href="https://amimoto-ami.com/" target="_blank"><img src="{{ '/assets/images/logo-amimoto.svg' | prepend: site.baseurl }}" alt="AMIMOTO AMI"></a></li>
+				<li><a href="http://gadget.renesas.com/" target="_blank"><img src="{{ '/assets/images/logo-renesas.svg' | prepend: site.baseurl }}" alt="ルネサスエレクトロニクス株式会社"></a></li>
 			</ul>
 		</div>
 		<div class="silver-sponsors">
