Add session possibility of programming learning by Minecraft #182

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ layout: default
 						<!-- <p class="time">[12:10-12:25]</p> -->
 					</li>
 					<li class="bg-dark duration-20min break-5min">
-						<h3 class="session-title"><!-- <a href="#coderdojo-minecraft" class="js-session-detail-trigger"> -->CoderDojoでMinecraftに触れる理由<span class="speaker"> / 寺園 聖文</span><!-- </a> --></h3>
+						<h3 class="session-title"><a href="#coderdojo-minecraft" class="js-session-detail-trigger">Minecraftによるプログラミング学習の可能性<span class="speaker"> / 寺園 聖文</span></a></h3>
 						<p class="time">[13:05-13:25]</p>
 					</li>
 					<li class="bg-light duration-15min">
