Add sponsor KDDI

--- a/index.html
+++ b/index.html
@@ -155,7 +155,6 @@ layout: default
 			</span>
 		</h1>
 		<div class="gold-sponsors">
-			<!-- 2つになったらSponsorsに戻す：高坂さんに確認済 -->
 			<h2>Gold Sponsors</h2>
 			<ul class="sponsors">
 				<li><a href="https://amimoto-ami.com/" target="_blank"><img src="{{ '/assets/images/logo-amimoto.svg' | prepend: site.baseurl }}" alt="AMIMOTO AMI"></a></li>
@@ -165,6 +164,7 @@ layout: default
 		<div class="silver-sponsors">
 			<h2>Silver Sponsors</h2>
 			<ul class="sponsors">
+				<li><a href="http://www.cpi.ad.jp/" target="_blank"><img src="{{ '/assets/images/logo-cpi.svg' | prepend: site.baseurl }}" alt="株式会社KDDIウェブコミュニケーションズ"></a></li>
 				<li><a href="http://www.mitou.org/" target="_blank"><img src="{{ '/assets/images/logo-mitou.png' | prepend: site.baseurl }}" alt="一般社団法人未踏"></a></li>
 				<li><a href="http://www.ec-cube.net" target="_blank"><img src="{{ '/assets/images/logo-eccube.svg' | prepend: site.baseurl }}" alt="EC-CUBE （株式会社ロックオン）"></a></li>
 				<li><a href="http://www.kdl.co.jp/" target="_blank"><img src="{{ '/assets/images/logo-kdl.svg' | prepend: site.baseurl }}" alt="株式会社神戸デジタル・ラボ"></a></li>
