--- a/index.html
+++ b/index.html
@@ -302,19 +302,19 @@ layout: default
 					<li class="bg-light duration-90min break-20min">
 						<h3 class="workshop-title"><a href="#workshop-coderdojo" class="js-session-detail-trigger">Scratchって何？ 初めてのCoderDojo! −オトナもコドモもニンジャになろう−</a></h3>
 						<p class="time">[10:40-12:10]</p>
-						<p class="description">事前のエントリー（申込）とPCを持参頂く必要があります。<br/>定員：大人６名、子供６名（大人だけ、子供だけでも参加可能です）<br/>エントリーは7/11開始予定です。<p>
+						<p class="description">事前のエントリー（申込）とPCを持参頂く必要があります。<br/>定員：大人６名、子供６名（大人だけ、子供だけでも参加可能です）<p>
 						<p><a href="{{ site.workshop_entryurl_1 }}" class="button button-small button-blue" target="_blank">Entry</a></p>
 					</li>
 					<li class="bg-dark duration-90min break-20min">
 						<h3 class="workshop-title"><a href="#workshop-coderdojo" class="js-fancybox-trigger">Scratchって何？ 初めてのCoderDojo! −オトナもコドモもニンジャになろう−</a></h3>
 						<p class="time">[12:30-14:00]</p>
-						<p class="description">事前のエントリー（申込）とPCを持参頂く必要があります。<br/>定員：大人６名、子供６名（大人だけ、子供だけでも参加可能です）<br/>エントリーは7/11開始予定です。</p>
+						<p class="description">事前のエントリー（申込）とPCを持参頂く必要があります。<br/>定員：大人６名、子供６名（大人だけ、子供だけでも参加可能です）</p>
 						<p><a href="{{ site.workshop_entryurl_2 }}" class="button button-small button-blue" target="_blank">Entry</a></p>
 					</li>
 					<li class="bg-light duration-90min break-20min">
 						<h3 class="workshop-title"><a href="#workshop-coderdojo" class="js-fancybox-trigger">Scratchって何？ 初めてのCoderDojo! −オトナもコドモもニンジャになろう−</a></h3>
 						<p class="time">[14:20-15:50]</p>
-						<p class="description">事前のエントリー（申込）とPCを持参頂く必要があります。<br/>定員：大人６名、子供６名（大人だけ、子供だけでも参加可能です）<br/>エントリーは7/11開始予定です。</p>
+						<p class="description">事前のエントリー（申込）とPCを持参頂く必要があります。<br/>定員：大人６名、子供６名（大人だけ、子供だけでも参加可能です）</p>
 						<p><a href="{{ site.workshop_entryurl_3 }}" class="button button-small button-blue" target="_blank">Entry</a></p>
 					</li>
 				</ol>
