Add in-kind sponsors

--- a/index.html
+++ b/index.html
@@ -154,14 +154,14 @@ layout: default
 				<span class="ja">スポンサー一覧</span>
 			</span>
 		</h1>
-		<div class="gold-sponsors">
+		<div class="gold-sponsors sponsor-container">
 			<h2>Gold Sponsors</h2>
 			<ul class="sponsors">
 				<li><a href="https://amimoto-ami.com/" target="_blank"><img src="{{ '/assets/images/logo-amimoto.svg' | prepend: site.baseurl }}" alt="AMIMOTO AMI"></a></li>
 				<li><a href="http://gadget.renesas.com/" target="_blank"><img src="{{ '/assets/images/logo-renesas.svg' | prepend: site.baseurl }}" alt="ルネサスエレクトロニクス株式会社"></a></li>
 			</ul>
 		</div>
-		<div class="silver-sponsors">
+		<div class="silver-sponsors sponsor-container">
 			<h2>Silver Sponsors</h2>
 			<ul class="sponsors">
 				<li><a href="http://www.cpi.ad.jp/" target="_blank"><img src="{{ '/assets/images/logo-cpi.svg' | prepend: site.baseurl }}" alt="株式会社KDDIウェブコミュニケーションズ"></a></li>
@@ -171,7 +171,7 @@ layout: default
 				<li><a href="http://www.artec-kk.co.jp/" target="_blank"><img src="{{ '/assets/images/logo-artec.svg' | prepend: site.baseurl }}" alt="株式会社アーテック"></a></li>
 			</ul>
 		</div>
-		<div class="bronze-sponsors">
+		<div class="bronze-sponsors sponsor-container">
 			<h2>Bronze Sponsors</h2>
 			<ul class="sponsors">
 				<li><a href="http://www.tam-tam.co.jp/" target="_blank"><img src="{{ '/assets/images/logo-tam.png' | prepend: site.baseurl }}" alt="株式会社TAM"></a></li>
@@ -180,6 +180,15 @@ layout: default
 				<li><a href="https://www.firstserver.co.jp/" target="_blank"><img src="{{ '/assets/images/logo-firstserver.svg' | prepend: site.baseurl }}" alt="ファーストサーバ株式会社"></a></li>
 				<li><a href="https://share-wis.com/" target="_blank"><img src="{{ '/assets/images/logo-sharewis.svg' | prepend: site.baseurl }}" alt="株式会社シェアウィズ"></a></li>
 				<li><a href="http://dotinstall.com/" target="_blank"><img src="{{ '/assets/images/logo-dotinstall.svg' | prepend: site.baseurl }}" alt="株式会社ドットインストール"></a></li>
+			</ul>
+		</div>
+		<div class="in-kind-sponsors sponsor-container">
+			<h2>In-kind Sponsors</h2>
+			<ul class="sponsors">
+				<li><a href="http://www.shoeisha.co.jp/" target="_blank"><img src="{{ '/assets/images/logo-shoeisha.svg' | prepend: site.baseurl }}" alt="株式会社翔泳社"></a></li>
+				<li><a href="http://pcn.club" target="_blank"><img src="{{ '/assets/images/logo-pcn.svg' | prepend: site.baseurl }}" alt="PCN"></a></li>
+				<li><a href="http://xooms.co.jp/" target="_blank"><img src="{{ '/assets/images/logo-xooms.svg' | prepend: site.baseurl }}" alt="株式会社XOOMS(ズームス)"></a></li>
+				<li><a href="https://rallyapp.jp/" target="_blank"><img src="{{ '/assets/images/logo-rally.svg' | prepend: site.baseurl }}" alt="RALLY"></a></li>
 			</ul>
 		</div>
 		<p class="become-a-sponsor-outer">
