--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ layout: default
 						<p class="time">[15:00-15:40]</p>
 					</li>
 					<li class="bg-dark duration-40min">
-						<h3 class="session-title"><!-- <a href="#champion-panel-discussion" class="js-session-detail-trigger"> -->チャンピオンパネルディスカッション（仮）<span class="speaker"> / 細谷 崇、宮島 衣瑛、とがぞの</span><!-- </a> --></h3>
+						<h3 class="session-title"><a href="#champion-panel-discussion" class="js-session-detail-trigger">チャンピオンパネルディスカッション<span class="speaker"> / 牧 美帆、山田 早里、角田 一平、田重田 勝一郎</span></a></h3>
 						<p class="time">[15:40-16:20]</p>
 					</li>
 					<li class="bg-light duration-10min">
