Add comozilla exhibition #215

--- a/index.html
+++ b/index.html
@@ -378,13 +378,23 @@ layout: default
 				</div>
 			</li>
 			<li>
-				<figure><img src="{{ '/assets/images/exhibition-mabee.png' | prepend: site.baseurl }}" alt="シャカシャカ振ってビュンビュン飛ばせ！カーレースでライバルに打ち勝て！のイメージ"></figure>
+				<figure><img src="{{ '/assets/images/exhibition-mabeee.png' | prepend: site.baseurl }}" alt="シャカシャカ振ってビュンビュン飛ばせ！カーレースでライバルに打ち勝て！のイメージ"></figure>
 				<div class="description">
 					<h3 class="exhibition-title">シャカシャカ振ってビュンビュン飛ばせ！カーレースでライバルに打ち勝て！<br>
 					<small>[Start : 10:00]<!-- [Area: C] --></small></h3>
-					<p>MaBeeとスマホを連動させて、ミニ四駆をコントロールしよう！<br>
+					<p>MaBeeeとスマホを連動させて、ミニ四駆をコントロールしよう！<br>
 					シャカシャカとスマホを振ってスピードをコントロールし、コースアウトせずにライバルに打ち勝とう！</p>
 					<p>（協力：ノバルス株式会社）</p>
+				</div>
+			</li>
+			<li>
+				<figure><img src="{{ '/assets/images/exhibition-comozilla.jpg' | prepend: site.baseurl }}" alt="パラパラアニメーションで世界に一つだけの海を作ろう！のイメージ"></figure>
+				<div class="description">
+					<h3 class="exhibition-title">パラパラアニメーションで世界に一つだけの海を作ろう！<br>
+					<small>[Start : 10:00]<!-- [Area: C] --></small></h3>
+					<p>パラパラマンガをつくるような感覚で自分の好きなアニメーションを描き、みんなで一つの大きな映像作品を作ります。<br>
+					世界に一つだけの海を、みんなで作りあげてみませんか？</p>
+					<p>（協力：コモジラ研究所）</p>
 				</div>
 			</li>
 		</ul>
