--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@ layout: default
 				<li><a href="http://pcn.club" target="_blank"><img src="{{ '/assets/images/logo-pcn.svg' | prepend: site.baseurl }}" alt="PCN"></a></li>
 				<li><a href="http://xooms.co.jp/" target="_blank"><img src="{{ '/assets/images/logo-xooms.svg' | prepend: site.baseurl }}" alt="株式会社XOOMS(ズームス)"></a></li>
 				<li><a href="https://rallyapp.jp/" target="_blank"><img src="{{ '/assets/images/logo-rally.svg' | prepend: site.baseurl }}" alt="RALLY"></a></li>
+				<li><a href="https://github.com/" target="_blank"><img src="{{ '/assets/images/logo-github.svg' | prepend: site.baseurl }}" alt="GitHub Inc."></a></li>
 			</ul>
 		</div>
 		<p class="become-a-sponsor-outer">
