Add sponsor Next Generation

--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@ layout: default
 				<li><a href="https://www.firstserver.co.jp/" target="_blank"><img src="{{ '/assets/images/logo-firstserver.svg' | prepend: site.baseurl }}" alt="ファーストサーバ株式会社"></a></li>
 				<li><a href="https://share-wis.com/" target="_blank"><img src="{{ '/assets/images/logo-sharewis.svg' | prepend: site.baseurl }}" alt="株式会社シェアウィズ"></a></li>
 				<li><a href="http://dotinstall.com/" target="_blank"><img src="{{ '/assets/images/logo-dotinstall.svg' | prepend: site.baseurl }}" alt="株式会社ドットインストール"></a></li>
+				<li><a href="http://www.next-ge.co.jp/" target="_blank"><img src="{{ '/assets/images/logo-nextge.svg' | prepend: site.baseurl }}" alt="ネクストジェネレーション株式会社"></a></li>
 			</ul>
 		</div>
 		<div class="in-kind-sponsors sponsor-container">
