Add individual supports

--- a/index.html
+++ b/index.html
@@ -194,6 +194,52 @@ layout: default
 				<li><a href="http://mabeee.mobi/" target="_blank"><img src="{{ '/assets/images/logo-novars.svg' | prepend: site.baseurl }}" alt="ノバルス株式会社"></a></li>
 			</ul>
 		</div>
+		<div class="individual-supporters sponsor-container">
+			<h2>Individual Supporters</h2>
+			<ul class="supports">
+				<li>Takashi Hosoya</li>
+				<li>寺園聖文</li>
+				<li>角田一平</li>
+				<li>Takahiro Kaihara</li>
+				<li>hohraku</li>
+				<li>Ryota Horii</li>
+				<li>建山和徳</li>
+				<li>吉田研一</li>
+				<li>杉山敦</li>
+				<li>Yoshinao Mori</li>
+				<li>高野一</li>
+				<li>antsst</li>
+				<li>Hiroki Iida</li>
+				<li>Yuichi Ueno</li>
+				<li>Kenji Kojima</li>
+				<li>Ando Mitsuaki</li>
+				<li>Chiharu Nagatomi</li>
+				<li>SeiN</li>
+				<li>kozaru</li>
+				<li>takenao</li>
+				<li>Shoichiro Tajuta</li>
+				<li>Akari Doi</li>
+				<li>MUROSAKI, Yasuyuki</li>
+				<li>Yoshiko Sarakai</li>
+				<li>Takashi Imamura</li>
+				<li>Tomohiro Kawanabe</li>
+				<li>tanaka0726</li>
+				<li>園田浩一</li>
+				<li>Masaki Ozawa</li>
+				<li>Aya Kimura</li>
+				<li>高松基広</li>
+				<li>Mutsuko Kurachi</li>
+				<li>Satoshi Tajima</li>
+				<li>mamy315</li>
+				<li>利根川裕太</li>
+				<li>Kazuhiro Okajima</li>
+				<li>skgm26</li>
+				<li>kanetei</li>
+				<li>Mitsuko Nakayama</li>
+				<li>shinichiN</li>
+				<li>Junko Nukaga</li>
+			</ul>
+		</div>
 		<p class="become-a-sponsor-outer">
 			<a href="{{ '/sponsor/' | prepend: site.baseurl }}" class="button button-large button-block become-a-sponsor">スポンサー申し込み</a>
 		</p>
