--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@ layout: default
 				<li>Takashi Imamura</li>
 				<li>Tomohiro Kawanabe</li>
 				<li>tanaka0726</li>
+				<li>クリエーションオフィス春夏秋冬</li>
 				<li>園田浩一</li>
 				<li>Masaki Ozawa</li>
 				<li>Aya Kimura</li>
