--- a/index.html
+++ b/index.html
@@ -323,8 +323,8 @@ layout: default
 						<p class="time">[14:10-14:35]</p>
 					</li>
 					<li class="bg-dark duration-20min break-5min">
-						<h3 class="session-title">Coming soon...</h3>
-						<!-- <p class="time">[14:35-14:55]</p> -->
+						<h3 class="session-title"><a href="#ninja-presentations" class="js-session-detail-trigger">ニンジャ作品発表</a></h3>
+						<p class="time">[14:35-14:55]</p>
 					</li>
 					<li class="bg-light duration-40min">
 						<h3 class="session-title"><!-- <a href="#coderdojo-foundation" class="js-session-detail-trigger"> -->CoderDojoムーブメントの旅 - アイルランドの1つのDojoから世界に広がる1000 Dojoへの軌跡をたどる（仮）<span class="speaker"> / ロス・オニール</span><!-- </a> --></h3>
