--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@ layout: default
 				<li><a href="https://rallyapp.jp/" target="_blank"><img src="{{ '/assets/images/logo-rally.svg' | prepend: site.baseurl }}" alt="RALLY"></a></li>
 				<li><a href="https://github.com/" target="_blank"><img src="{{ '/assets/images/logo-github.svg' | prepend: site.baseurl }}" alt="GitHub Inc."></a></li>
 				<li><a href="http://mabeee.mobi/" target="_blank"><img src="{{ '/assets/images/logo-novars.svg' | prepend: site.baseurl }}" alt="ノバルス株式会社"></a></li>
+				<li><a href="https://edu.monaca.io/" target="_blank"><img src="{{ '/assets/images/logo-asial.svg' | prepend: site.baseurl }}" alt="アシアル株式会社"></a></li>
 			</ul>
 		</div>
 		<div class="individual-supporters sponsor-container">
