Add staff photo #252

--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@ layout: default
 			<h2 class="member-name"><a href="http://kiteretz.com" target="_blank">カイト</a></h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="{{ '/assets/images/staff-dojocon.png' | prepend: site.baseurl }}" alt="井上一のプロフィール画像"></figure>
+			<figure class="member-avator"><img src="{{ '/assets/images/staff-inoue.jpg' | prepend: site.baseurl }}" alt="井上一のプロフィール画像"></figure>
 			<h2 class="member-name">井上一</h2>
 		</li>
 		<li>
