Add banner coderdojofoundation #263

--- a/index.html
+++ b/index.html
@@ -612,6 +612,11 @@ layout: default
 			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 		</li>
 	</ul>
+	<div class="supporter-banner">
+		<h2><span>後援</span></h2>
+		<p>
+			<a href="https://coderdojo.com/about/coderdojo-foundation/" target="_blank" class="banner"><img src="{{ '/assets/images/cd-foundation-logo.png' | prepend: site.baseurl }}" alt="CoderDojo Foundation ロゴ画像"></a>
+		</p>
 
 	<div class="photo-gallery">
 		<ul class="photos js-photos">
