--- a/index.html
+++ b/index.html
@@ -617,6 +617,7 @@ layout: default
 		<p>
 			<a href="https://coderdojo.com/about/coderdojo-foundation/" target="_blank" class="banner"><img src="{{ '/assets/images/cd-foundation-logo.png' | prepend: site.baseurl }}" alt="CoderDojo Foundation ロゴ画像"></a>
 		</p>
+	</div>
 
 	<div class="photo-gallery">
 		<ul class="photos js-photos">
