Remove sponsor application form #263

--- a/index.html
+++ b/index.html
@@ -242,9 +242,9 @@ layout: default
 				<li>Junko Nukaga</li>
 			</ul>
 		</div>
-		<p class="become-a-sponsor-outer">
+<!-- 		<p class="become-a-sponsor-outer">
 			<a href="{{ '/sponsor/' | prepend: site.baseurl }}" class="button button-large button-block become-a-sponsor">スポンサー申し込み</a>
-		</p>
+		</p> -->
 	</div>
 </div>
 
