--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ layout: default
 						<p class="time">[11:45-12:05]</p>
 					</li>
 					<li class="bg-light duration-10min">
-						<h3 class="session-title">内田洋行株式会社様　ご登壇予定</h3>
+						<h3 class="session-title">株式会社内田洋行様　ご登壇予定</h3>
 						<p class="time">[12:15-12:25]</p>
 					</li>
 					<li class="bg-dark duration-20min break-5min">
