Add speakers of ninja presentation.

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ layout: default
 						<p class="time">[14:10-14:35]</p>
 					</li>
 					<li class="bg-dark duration-20min break-5min">
-						<h3 class="session-title"><a href="#ninja-presentations" class="js-session-detail-trigger">ニンジャ作品発表</a></h3>
+						<h3 class="session-title"><a href="#ninja-presentations" class="js-session-detail-trigger">ニンジャ作品発表<span class="speaker"> / 城野 夏妃、田中 たいり、野村 風太、長谷川 塁音</span></a></h3>
 						<p class="time">[14:35-14:55]</p>
 					</li>
 					<li class="bg-light duration-40min">
