Add exhibition rally #199

--- a/index.html
+++ b/index.html
@@ -448,6 +448,16 @@ layout: default
 					<p>（協力：コモジラ研究所）</p>
 				</div>
 			</li>
+			<li>
+				<figure><img src="{{ '/assets/images/exhibition-rally.jpg' | prepend: site.baseurl }}" alt="モバイルスタンプラリーのイメージ"></figure>
+				<div class="description">
+					<h3 class="exhibition-title">モバイルスタンプラリー<br>
+					<small>[Start : 10:00]<!-- [Area: C] --></small></h3>
+					<p>会場に隠れた風魔たちを見つけて、限定ステッカーをゲットしよう！<br>
+					初開催の DojoCon Japanに風魔たちも参戦！どうやら展示されている作品を盗もうと企んでいるみたい。目撃情報をもとにイベント会場に隠れている風魔たち4人を見つけ出し、悪巧みを阻止しよう！</p>
+					<p>（協力：<a href="https://rallyapp.jp/" target="_blank">RALLY</a>）</p>
+				</div>
+			</li>
 		</ul>
 	</div>
 	{% include sessions.html %}
