#284 Add "yasukawa" in time table.

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ layout: default
 						<p class="time">[10:40-11:20]</p>
 					</li>
 					<li class="bg-light duration-20min">
-						<h3 class="session-title"><a href="#student-champions" class="js-session-detail-trigger">学生の道場運営者に聞く！<span class="speaker"> / 宮島 衣瑛、東 和樹</span></a></h3>
+						<h3 class="session-title"><a href="#student-champions" class="js-session-detail-trigger">学生の道場運営者に聞く！<span class="speaker"> / 宮島 衣瑛、東 和樹、安川 要平</span></a></h3>
 						<p class="time">[11:25-11:45]</p>
 					</li>
 					<li class="bg-dark duration-20min break-10min">
@@ -320,7 +320,7 @@ layout: default
 						<p class="time">[13:45-14:05]</p>
 					</li>
 					<li class="bg-light duration-25min">
-						<h3 class="session-title"><a href="#programming-schools-discussion" class="js-session-detail-trigger">有償と無償で何が違う？<br>プログラミング教室/コミュニティー運営座談会<span class="speaker"> / 倉本 大資、谷岡 広樹、橋爪 香織</span></a></h3>
+						<h3 class="session-title"><a href="#programming-schools-discussion" class="js-session-detail-trigger">有償と無償で何が違う？<br>プログラミング教室/コミュニティー運営座談会<span class="speaker"> / 倉本 大資、谷岡 広樹、橋爪 香織、安川 要平</span></a></h3>
 						<p class="time">[14:10-14:35]</p>
 					</li>
 					<li class="bg-dark duration-20min break-5min">
@@ -332,7 +332,7 @@ layout: default
 						<p class="time">[15:00-15:40]</p>
 					</li>
 					<li class="bg-dark duration-40min">
-						<h3 class="session-title"><a href="#champion-panel-discussion" class="js-session-detail-trigger">チャンピオンパネルディスカッション<span class="speaker"> / 牧 美帆、山田 早里、細谷 崇、角田 一平、田重田 勝一郎</span></a></h3>
+						<h3 class="session-title"><a href="#champion-panel-discussion" class="js-session-detail-trigger">チャンピオンパネルディスカッション<span class="speaker"> / 牧 美帆、山田 早里、細谷 崇、角田 一平、田重田 勝一郎、安川 要平</span></a></h3>
 						<p class="time">[15:40-16:20]</p>
 					</li>
 					<li class="bg-light duration-10min">
