--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ layout: default
 						<p class="time">[14:35-14:55]</p>
 					</li>
 					<li class="bg-light duration-40min">
-						<h3 class="session-title"><a href="#coderdojo-foundation" class="js-session-detail-trigger">CoderDojo ムーブメント − 可能にする、かかわる、大きく広がる方法<span class="speaker"> / ロス・オニール</span><</a></h3>
+						<h3 class="session-title"><a href="#coderdojo-foundation" class="js-session-detail-trigger">CoderDojo ムーブメント − 可能にする、かかわる、大きく広がる方法<span class="speaker"> / ロス・オニール</span></a></h3>
 						<p class="time">[15:00-15:40]</p>
 					</li>
 					<li class="bg-dark duration-40min">
